...
  const timerText = lastBreathVisible ? lastBreathLabel : clockText;

  return (
    <Animated.View style={[styles.container, containerAnimatedStyle]}>
      <Animated.Text
        style={[styles.timerText, isDarkMode && styles.timerTextDark]}
        testID="exercise.timer"
      >
        {timerText}
      </Animated.Text>
    </Animated.View>
  );
};
...
